// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet: #0 [babel-ts] format 1`] = `
"Tuple members must be labeled with a simple identifier. (1:11)
> 1 | type T = [x.y: A];
    |           ^
Cause: Tuple members must be labeled with a simple identifier. (1:10)"
`;

exports[`snippet: #0 [typescript] format 1`] = `
"',' expected. (1:14)
> 1 | type T = [x.y: A];
    |              ^
Cause: ',' expected."
`;

exports[`snippet: #1 [babel-ts] format 1`] = `
"Tuple members must be labeled with a simple identifier. (1:11)
> 1 | type T = [x<y>: A];
    |           ^
Cause: Tuple members must be labeled with a simple identifier. (1:10)"
`;

exports[`snippet: #1 [typescript] format 1`] = `
"',' expected. (1:15)
> 1 | type T = [x<y>: A];
    |               ^
Cause: ',' expected."
`;
